--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,4 +44,4 @@ jobs:
         with:
           images: luc4sd3s0uz4/temp:${{ github.run_number }}
           manifests: |
-            k8s/deployment.yaml
+            deployment.yaml
